--- a/src/components/QuestionPaper/question-paper.css
+++ b/src/components/QuestionPaper/question-paper.css
@@ -245,7 +245,7 @@
     margin-top: 5px;
   }
 
-  :where(.css-dev-only-do-not-override-byeoj0).ant-divider-horizontal {
+  .ant-divider-horizontal {
     border-color: black !important;
   }
   .question{
@@ -330,3 +330,49 @@
     }
 }
 
+
+
+
+.margin-input-section{
+  position: fixed;
+  top: 100px;
+  left: 10px;
+  background-color: white;
+  padding: 20px;
+  display: flex;
+  gap: 5px;
+  margin: 10px;
+  border-radius: 6px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.odd-page {
+  background-color: #f5f5f5; /* Light gray background for odd pages */
+}
+
+.even-page {
+  background-color: #ffffff; /* White background for even pages */
+}
+
+.Question-paper-section{
+  position: relative;
+  overflow: hidden;
+}
+/* .page-color:first-child{
+  visibility: hidden;
+} */
+
+.page-color{
+  width: 100%;
+  height: 1000px;
+  /* border: 1px solid grey; */
+}
+.background-box{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+}
